knn、sklearn、numpy、cnn实现手写数字识别

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -30,21 +30,8 @@
    "cell_type": "code",
    "source": [
     "# 加载MNIST数据集\n",
-    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n"
-   ],
-   "id": "c3d4f489a325207f",
-   "outputs": [],
-   "execution_count": 10
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:19.801735Z",
-     "start_time": "2024-12-09T12:15:19.668898Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "\n",
     "# 数据预处理\n",
     "x_train = x_train.reshape((x_train.shape[0], 28, 28, 1)).astype(\"float32\") / 255.0\n",
     "x_test = x_test.reshape((x_test.shape[0], 28, 28, 1)).astype(\"float32\") / 255.0\n",
@@ -53,9 +40,9 @@
     "y_train = tf.keras.utils.to_categorical(y_train, 10)\n",
     "y_test = tf.keras.utils.to_categorical(y_test, 10)"
    ],
-   "id": "c99e998aceb2bd6c",
+   "id": "c3d4f489a325207f",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {
@@ -91,7 +78,6 @@
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "# 编译模型\n",
     "model.compile(optimizer='adam',\n",
     "              loss='categorical_crossentropy',\n",
@@ -110,7 +96,6 @@
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "# 训练模型\n",
     "history = model.fit(x_train, y_train, epochs=5, batch_size=64, validation_split=0.1)\n"
    ],
