--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -6,19 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:50.775581Z",
-     "start_time": "2024-12-09T12:21:50.772342Z"
+     "end_time": "2024-12-09T13:39:19.020065Z",
+     "start_time": "2024-12-09T13:39:19.017447Z"
     }
    },
-   "source": "import numpy as np\n",
+   "source": [
+    "import numpy as np\n",
+    "# import cupy as np"
+   ],
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 94
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:50.949596Z",
-     "start_time": "2024-12-09T12:21:50.777577Z"
+     "end_time": "2024-12-09T13:39:19.216054Z",
+     "start_time": "2024-12-09T13:39:19.029051Z"
     }
    },
    "cell_type": "code",
@@ -30,13 +33,13 @@
    ],
    "id": "3240ff354b7cc494",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 95
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.076016Z",
-     "start_time": "2024-12-09T12:21:50.956871Z"
+     "end_time": "2024-12-09T13:39:19.339505Z",
+     "start_time": "2024-12-09T13:39:19.222975Z"
     }
    },
    "cell_type": "code",
@@ -60,13 +63,13 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 96
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.090994Z",
-     "start_time": "2024-12-09T12:21:51.088506Z"
+     "end_time": "2024-12-09T13:39:19.350467Z",
+     "start_time": "2024-12-09T13:39:19.347904Z"
     }
    },
    "cell_type": "code",
@@ -77,13 +80,13 @@
    ],
    "id": "3c85797e84e9ea82",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 97
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.102663Z",
-     "start_time": "2024-12-09T12:21:51.097664Z"
+     "end_time": "2024-12-09T13:39:19.363021Z",
+     "start_time": "2024-12-09T13:39:19.357083Z"
     }
    },
    "cell_type": "code",
@@ -108,16 +111,14 @@
     "        return self.output2\n",
     "    \n",
     "    def backward(self, x, true, output):\n",
-    "        # error =self.cross_entropy_loss(output,true)\n",
-    "        error = true-output\n",
-    "        # print(f\"error:{error}\")\n",
+    "        error = output-true\n",
     "        output2_derivative = error * self.sigmoid_derivative(output)\n",
     "        error1 = output2_derivative.dot(self.weights2.T)\n",
     "        output1_derivative = error1 * self.sigmoid_derivative(self.output1)    \n",
-    "        self.weights2 += self.learning_rate*self.output1.T.dot(output2_derivative)\n",
-    "        self.weights1 += self.learning_rate*x.reshape(784, 1).dot(output1_derivative)\n",
-    "        self.bias2 +=self.learning_rate* np.sum(output2_derivative, axis=0, keepdims=True)\n",
-    "        self.bias1 +=self.learning_rate* np.sum(output1_derivative, axis=0, keepdims=True)\n",
+    "        self.weights2 -= self.learning_rate*self.output1.T.dot(output2_derivative)\n",
+    "        self.weights1 -= self.learning_rate*x.reshape(784, 1).dot(output1_derivative)\n",
+    "        self.bias2 -=self.learning_rate* np.sum(output2_derivative, axis=0, keepdims=True)\n",
+    "        self.bias1 -=self.learning_rate* np.sum(output1_derivative, axis=0, keepdims=True)\n",
     "    \n",
     "    def cross_entropy_loss(self,output, true):\n",
     "        delta = 1e-7\n",
@@ -125,13 +126,13 @@
    ],
    "id": "71ac489d32abd4bf",
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 98
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.111784Z",
-     "start_time": "2024-12-09T12:21:51.108424Z"
+     "end_time": "2024-12-09T13:39:19.374015Z",
+     "start_time": "2024-12-09T13:39:19.371020Z"
     }
    },
    "cell_type": "code",
@@ -149,13 +150,13 @@
    ],
    "id": "e23926a240b4f14a",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 99
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.121137Z",
-     "start_time": "2024-12-09T12:21:51.118174Z"
+     "end_time": "2024-12-09T13:39:19.384139Z",
+     "start_time": "2024-12-09T13:39:19.381013Z"
     }
    },
    "cell_type": "code",
@@ -170,13 +171,13 @@
    ],
    "id": "6faaed7db1ef69fc",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 100
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.150452Z",
-     "start_time": "2024-12-09T12:21:51.127784Z"
+     "end_time": "2024-12-09T13:46:51.257932Z",
+     "start_time": "2024-12-09T13:39:19.392070Z"
     }
    },
    "cell_type": "code",
@@ -195,26 +196,219 @@
    "id": "c4232dbe96310ed6",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "ufunc 'bitwise_xor' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[56], line 9\u001B[0m\n\u001B[0;32m      6\u001B[0m nn \u001B[38;5;241m=\u001B[39m NeuralNetwork(input_size, hidden_size, output_size, learning_rate)\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# 训练神经网络\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m \u001B[43mtrain_nn\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnn\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtrain_images\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtrain_labels\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mepochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m100\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[55], line 5\u001B[0m, in \u001B[0;36mtrain_nn\u001B[1;34m(nn, train_images, train_labels, epochs)\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m image, label \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mzip\u001B[39m(train_images, train_labels):\n\u001B[0;32m      4\u001B[0m     output \u001B[38;5;241m=\u001B[39m nn\u001B[38;5;241m.\u001B[39mforward(image)\n\u001B[1;32m----> 5\u001B[0m     \u001B[43mnn\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimage\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlabel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moutput\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEpoch \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mepoch\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m complete\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      7\u001B[0m evaluate_nn(nn, test_images[epoch\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m10\u001B[39m:(epoch\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m)\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m10\u001B[39m], test_labels[epoch\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m10\u001B[39m:(epoch\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m)\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m10\u001B[39m])\n",
-      "Cell \u001B[1;32mIn[53], line 22\u001B[0m, in \u001B[0;36mNeuralNetwork.backward\u001B[1;34m(self, x, true, output)\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mbackward\u001B[39m(\u001B[38;5;28mself\u001B[39m, x, true, output):\n\u001B[0;32m     21\u001B[0m     \u001B[38;5;66;03m# error =self.cross_entropy_loss(output,true)\u001B[39;00m\n\u001B[1;32m---> 22\u001B[0m     error \u001B[38;5;241m=\u001B[39m \u001B[43m(\u001B[49m\u001B[43mtrue\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43moutput\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m^\u001B[39;49m\u001B[38;5;241;43m2\u001B[39;49m\n\u001B[0;32m     23\u001B[0m     \u001B[38;5;66;03m# print(f\"error:{error}\")\u001B[39;00m\n\u001B[0;32m     24\u001B[0m     output2_derivative \u001B[38;5;241m=\u001B[39m error \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msigmoid_derivative(output)\n",
-      "\u001B[1;31mTypeError\u001B[0m: ufunc 'bitwise_xor' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 1 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 2 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 3 complete\n",
+      "Accuracy: 80.0%\n",
+      "Epoch 4 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 5 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 6 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 7 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 8 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 9 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 10 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 11 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 12 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 13 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 14 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 15 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 16 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 17 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 18 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 19 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 20 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 21 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 22 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 23 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 24 complete\n",
+      "Accuracy: 80.0%\n",
+      "Epoch 25 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 26 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 27 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 28 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 29 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 30 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 31 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 32 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 33 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 34 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 35 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 36 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 37 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 38 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 39 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 40 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 41 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 42 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 43 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 44 complete\n",
+      "Accuracy: 80.0%\n",
+      "Epoch 45 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 46 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 47 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 48 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 49 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 50 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 51 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 52 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 53 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 54 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 55 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 56 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 57 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 58 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 59 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 60 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 61 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 62 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 63 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 64 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 65 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 66 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 67 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 68 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 69 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 70 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 71 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 72 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 73 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 74 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 75 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 76 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 77 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 78 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 79 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 80 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 81 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 82 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 83 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 84 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 85 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 86 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 87 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 88 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 89 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 90 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 91 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 92 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 93 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 94 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 95 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 96 complete\n",
+      "Accuracy: 90.0%\n",
+      "Epoch 97 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 98 complete\n",
+      "Accuracy: 100.0%\n",
+      "Epoch 99 complete\n",
+      "Accuracy: 100.0%\n"
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 101
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.155448Z",
-     "start_time": "2024-12-09T11:45:45.614388Z"
+     "end_time": "2024-12-09T13:47:01.004098Z",
+     "start_time": "2024-12-09T13:47:00.860687Z"
     }
    },
    "cell_type": "code",
@@ -229,17 +423,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.52%\n"
+      "Accuracy: 97.37%\n"
      ]
     }
    ],
-   "execution_count": 319
+   "execution_count": 104
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:21:51.155448Z",
-     "start_time": "2024-12-09T11:00:50.915673Z"
+     "end_time": "2024-12-09T13:46:51.438678Z",
+     "start_time": "2024-12-09T13:46:51.436108Z"
     }
    },
    "cell_type": "code",
@@ -257,7 +451,7 @@
    ],
    "id": "32cf80abc5ece7ae",
    "outputs": [],
-   "execution_count": 316
+   "execution_count": 103
   }
  ],
  "metadata": {
